--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
   max-width: 1440px;
   width: 100%;
 }
+button{
+  border:none;
+}
 
 /*  nav bar qismi  */
 nav {
@@ -24,12 +27,19 @@ nav {
   display: flex;
   gap: 50px;
   margin-right: 200px;
+  a{
+    color:black;
+  }
 }
 .log_in {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
+  a{
+    color:black;
+
+  }
 }
 .log_in button{
     width: 120px;
@@ -48,7 +58,7 @@ nav {
 .hero_text{
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 80px;
     width: 1500px !important;
     position: relative;
     left: 150px;
@@ -63,6 +73,8 @@ nav {
 .text_button{
     display: flex;
     gap: 20px;
+    margin-top: 80px;
+    
 }
 .text_button button{
     width: 162px;
@@ -71,6 +83,8 @@ nav {
     color:white;
     border-radius:20px
 }
+
+  
 .learn{
     display: flex;
     justify-content: center;
@@ -118,12 +132,16 @@ nav {
 .our_vison {
   margin-top: 50px;
 }
+.our_div{
+  margin-top: 70px;
+}
 .our_text {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
+  gap: 50px;
 }
 .our_text h2 {
   font-size: 52px;
@@ -280,13 +298,20 @@ nav {
 
 
 /* Meet  */
+.meet_team{
+  margin-top: 110px;
+
+}
 .meet_top{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 50px;
-  gap: 20px;
+  gap: 40px;
+  p{
+    color:#8A898E
+  }
 }
 .meet_top h2{
   font-size: 40px;
@@ -368,9 +393,14 @@ nav {
 
 /* Subsribe */
 
+.Subscribe_div{
+  margin-top: 110px;
+}
+
 .Subscribe_title h2{
   font-size: 40px;
 }
+
 
 .Subscribe_title{
   display: flex;
@@ -378,7 +408,10 @@ nav {
   justify-content: center;
   align-items: center;
   margin-top: 50px;
-  
+  gap: 30px;
+  p{
+    color:#8A898E;
+  }
 }
 
 .Subscribe_button{
